--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "web/--name"]
-	path = web/--name
+[submodule "web/gif.js"]
+	path = web/gif.js
 	url = https://github.com/andrewrubinstein/gif.js.git
